Flask Routes Function Well, Shows Output based on CheckBoxes

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,10 @@
 <html>
-    <body>
-         
+    <body> 
         <form method="post" action="/">
                 {%for i in variable%}
-                    <input type="checkbox" name="options" value=i> {{i}} </input><br>
+                    <input type="checkbox" name="symptoms" value={{i}}> {{i}} </input><br>
                 {%endfor%}
-        </form>
-        <form action="/predicted">
-            <input type="submit" value="Diagnose" />
+                <input type="submit" value="Diagnose" />
         </form>
     </body>
 </html>
