Complete with added Chatterbot

--- a/templates/sym-sel.html
+++ b/templates/sym-sel.html
@@ -9,12 +9,12 @@
         </style>
     </head>
     <body> 
-        <form method="post" action="/">
+        <form method="post" action="#">
             <ul class="checkbox-grid">
                 {%for i in variable%}
-                    <li><input type="checkbox" name="symptoms" value={{i}}><label for = {{i}}> {{i.replace("_"," ").capitalize()}} </label></input></li>
+                    <li><input type="checkbox" name="symptoms" value={{i}}><label for = {{i}}>{{i.replace("_"," ").capitalize()}}</label></input></li>
                 {%endfor%}
-                <input type="submit" value="Diagnose" />
+                <input type="submit" value="Add Symptoms" style="align: centerbackground-color: green;" />
             </ul>
         </form>
     </body>
